--- a/github/workflows/metrics.yml
+++ b/github/workflows/metrics.yml
@@ -1,10 +1,10 @@
 name: Metrics
 on:
-  # Schedule daily updates
+  # Schedule daily updates (at midnight Lagos time approx)
   schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Allow manual trigger
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
+  # Run on push to main branch
   push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
@@ -14,8 +14,22 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # Your token from Step 2
+          token: ${{ secrets.METRICS_TOKEN }}
+          
+          # Options
           user: T3mmyKay
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Africa/Lagos
+          
+          # Theme (matches your preference)
+          config_theme: tokyonight
+          
+          # Content configuration
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            html, css
+          plugin_habits: yes
+          plugin_habits_charts: yes
+          plugin_habits_days: 14
